# Python-Model-Scenario-Simulation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADDING_A_MODEL.md  ARCHITECTURE.md  BRIDGE_TO_SMC2.md  SCENARIO_FORMAT.md  VALIDATION_DISCIPLINE.md
examples/fsa_high_res/: 14d_C0_recovery.py  README.md
examples/glucose_insulin/: 24h_set_A_healthy.py  24h_set_B_insulin_resistance.py  24h_set_C_t1d_no_insulin.py  24h_set_D_t1d_open_loop.py  _common.py
examples/sir/: 14d_set_A_boarding_school.py  60d_set_B_small.py  90d_set_C_large.py  90d_set_D_vax.py  _common.py
examples/swat/: 14d_set_A_healthy.py  14d_set_B_amplitude.py  14d_set_C_recovery.py  14d_set_D_phase_shift.py  14d_set_E_overtrained.py  14d_set_F_sedentary.py  README.md  _common.py
psim/: __init__.py
psim/_vendored/: PROVENANCE.md
psim/cli/: main.py
psim/data/: __init__.py  anderson_may_1978_flu.py  bergman_1979_fsigt.py
psim/io/: __init__.py  format.py
psim/pipelines/: __init__.py  package.py  synthesise.py  validate.py
tests/: conftest.py  test_consistency_fsa_high_res.py  test_consistency_glucose_insulin.py  test_consistency_sir.py  test_consistency_swat.py  test_io_format.py  test_paper_parity_glucose_insulin.py  test_paper_parity_sir.py  test_pipelines_with_stub.py  test_round_trip_fsa_high_res.py  test_round_trip_glucose_insulin.py  test_round_trip_sir.py  test_round_trip_swat.py  test_scenario_fsa_high_res.py  test_scenario_glucose_insulin.py  test_scenario_sir.py  test_scenario_swat.py  test_scenarios.py  test_validation_consistency.py
(+71 files in other folders)
